modifiche per sonarcloud